# OMNI-MS-Access-MCP

./: README.md  install_deps.bat  publish.bat  pyproject.toml  requirements.txt  server.py
omni_ms_access_mcp/: __init__.py  cli.py  server.py
