[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omni-ms-access-mcp"
version = "0.1.0"
description = "MCP tools for Microsoft Access databases"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "pyodbc>=4.0.30",
    "mcp[cli]>=0.5.0",
]

[project.scripts]
ms-access-mcp = "omni_ms_access_mcp.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["omni_ms_access_mcp"] 